# awatari

./: .gitignore  CMakeLists.txt  debug.sh  release.sh  updatesrcdeps.sh
include/: stdafx.h
include/Awatari/: Awatari.h
include/Awatari/Video/: NTSC.h  TIA.h
kernel/: kernel.s  kernel.txt
src/: CMakeLists.txt  main.cpp
src/Awatari/: Awatari.cpp
src/Awatari/Video/: TIA.cpp
